--- a/style.css
+++ b/style.css
@@ -1,109 +1,300 @@
-*
-{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-}
-body
-{
-    background: black;
-    color: #171717;
-}
-.container
-{
-    background-color: #fff;
-    color: #171717;
-    width: 40%;
-    padding: 2rem;
-    margin: 4rem auto;
-    border-radius: 10px;
-    -webkit-border-radius: 10px;
-    -moz-border-radius: 10px;
-    -ms-border-radius: 10px;
-    -o-border-radius: 10px;
+@import url('https://fonts.googleapis.com/css2?family=Baloo+Bhaijaan+2&family=Martel+Sans&family=Poppins:wght@200&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Baloo+Bhaijaan+2&family=Martel+Sans&family=Poppins:wght@200;400&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@600&display=swap');
 
+* {
+    padding: 0;
+    margin: 0;
+    font-family: 'Poppins', sans-serif;
 }
-.weather_header
-{
+
+body {
+    background-color: black;
+}
+
+.main {
+    background-image: url("/assets/main.jpg");
+    background-position: center center;
+    background-repeat: no-repeat;
+    max-width: max(1200px, 100vw);
+    background-size: cover;
+    height: 90vh;
+    position: relative;
+}
+
+.main .box {
+    height: 90vh;
+    width: 100vw;
+    opacity: 0.7;
+    background-color: #000000;
+    position: absolute;
+    top: 0;
+}
+
+nav {
+    max-width: 80vw;
+    margin: auto;
     display: flex;
     justify-content: space-between;
     align-items: center;
+    height: 62px;
 }
-input
-{
+
+nav img {
+    width: 190px;
+    position: relative;
+    z-index: 10;
+}
+
+nav button {
+    position: relative;
+    z-index: 10;
+}
+
+.hero {
+    position: relative;
+    height: calc(100% - 122px);
+    font-family: 'Martel Sans', sans-serif;
+    color: white;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: 23px;
+    padding: 30px;
+}
+
+.hero>:first-child {
+    font-family: 'Poppins', sans-serif;
+    font-size: 48px;
+    font-weight: 900;
+    text-align: center;
+}
+
+.hero>:nth-child(2) {
+    font-size: 24px;
+    font-weight: 400;
+    text-align: center;
+}
+
+.hero>:nth-child(3) {
+    font-size: 20px;
+    font-weight: 400;
+    text-align: center;
+}
+
+.line {
+    height: 7px;
+    background-color: gray;
+    opacity: 0.3;
+}
+
+.btn-sm-lang {
+    height: 32px;
+    font-size: 14px;
+    font-weight: 600;
+    width: 76.9px;
+    background-color: rgba(24, 24, 24, 0.021);
+    color: white;
+    border: 1px solid white;
+    border-radius: 4px;
+}
+
+.btn-sm {
+    height: 32px;
+    font-size: 14px;
+    font-weight: 600;
+    width: 76.9px;
     border: none;
-    background-color: #000;
-    color: #fff;
-    outline: none;
-    padding: 0.5rem 2.5rem;
-    border-radius: 5px;
-    -webkit-border-radius: 5px;
-    -moz-border-radius: 5px;
-    -ms-border-radius: 5px;
-    -o-border-radius: 5px;
 }
-input::placeholder
-{
-    color: #fff;
+
+.hero-btn {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 15px;
 }
-.weather_serach
+
+.btn-red-sm {
+    background-color: red;
+    color: white;
+    height: 32px;
+    cursor: pointer;
+}
+
+.input {
+    padding: 14px 187px 14px 10px;
+    font-size: 24px;
+    background-color: rgba(23, 23, 23, 0.8);
+    border: rgba(23, 23, 23, 0.5);
+    border-radius: 6px;
+    font-size: 16px;
+    font-weight: 600;
+    color: white;
+
+}
+
+.btn-red {
+    background-color: red;
+    color: white;
+    border-radius: 6px;
+    font-size: 24px;
+    border: none;
+    height: 56px;
+    font-weight: 600;
+    width: 209px;
+    cursor: pointer;
+}
+
+.first {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: auto;
+    max-width: 80vw;
+    color: white;
+    height: 590px;
+}
+
+.first>div {
+    display: flex;
+    flex-direction: column;
+}
+
+.first>div :first-child {
+    font-size: 48px;
+    font-weight: 900;
+}
+
+.first>div :nth-child(2) {
+    font-size: 24px;
+    font-weight: 400;
+}
+
+
+.sec_img {
+    top: 10px;
+    position: relative;
+    background-image: url("/tv.png");
+    display: inline-block;
+    width: 725px;
+    height: 400px;
+    background-repeat: no-repeat;
+    bottom: 10px;
+}
+
+.sec_img2 {
+    top: 10px;
+    position: relative;
+    background-image: url("/assets/4.png");
+    display: inline-block;
+    width: 725px;
+    height: 400px;
+    background-repeat: no-repeat;
+    bottom: 10px;
+}
+
+
+.sec_img video {
+    z-index: -1;
+    position: absolute;
+    top: 57%;
+    left: 56%;
+    transform: translate(-50%, -50%);
+    max-width: 80%;
+    height: auto;
+
+}
+
+.sec_img2 video {
+    z-index: -1;
+    position: absolute;
+    top: 40%;
+    left: 59%;
+    transform: translate(-50%, -50%);
+    max-width: 75%;
+    height: auto;
+
+}
+
+
+.faq {
+    color: white;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: 10px;
+}
+
+.faq h2 {
+    text-align: center;
+    padding: 34px;
+    font-size: 48px;
+    font-weight: 900;
+}
+
+.faqbox {
+    transition: all 1s ;
+    display: flex;
+    align-items: flex-start;
+    justify-content: space-between;
+    background-color: #2D2D2D;
+    padding: 1.5rem;
+    width: 70vw;
+    font-size: 24px;
+    font-weight: 400;
+    cursor: pointer;
+}
+
+.faqbox:hover
 {
+    background-color: #414141;
+}
+
+.faq-msg {
+    display: flex;
+    flex-direction: column;
+    gap: 15px;
+    margin-top: 40px;
+    margin-bottom: 60px;
+}
+
+.faq-msg h3
+{
+    font-size: 20px;
+    font-weight: 400;
+}
+
+footer
+{
+    color: #B3B3B3;
     position: relative;
 }
-.weather_forecast 
+#call
 {
-    background-color: rgba(0, 0, 0, 0.297);
-    /* color: white; */
-    padding: 5px;
-    margin: 5px;
-    text-align: center;
-    border: none;
-    border-radius: 20px;
-    -webkit-border-radius: 20px;
-    -moz-border-radius: 20px;
-    -ms-border-radius: 20px;
-    -o-border-radius: 20px;
+ /* padding-top: 60px;    */
+ position: absolute;
+ top: 90px;
+ left: 150px;
 }
-.weather_serach i
+.footer-links
 {
-    position: absolute;
-    left: 10px;
-    top: 10px;
-    font-size: 15px;
-    color:#fff;
+    margin-top: 0px;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    min-width: 60vw;
+    min-height: 55vh;
 }
-.weather_body
+.footer-item
 {
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    padding: 30px;
-    margin: 10px;
 }
-.weather_info
+a
 {
-    display: flex;
-    align-items: center;
-    justify-content: space-around;
-    flex-wrap: wrap;
-
-}
-.weather_info .weather_card
-{
-    display: flex;
-    width: 50px;
-    align-items: center;
-    justify-content: center;
-    width: 200px;
-    border: 1px solid black;
-    border-radius: 5px;
-    -webkit-border-radius: 5px;
-    -moz-border-radius: 5px;
-    -ms-border-radius: 5px;
-    -o-border-radius: 5px;
-    padding: 10px;
-    margin-top: 5px;
-    gap: 20px;
-    
+    margin-top: 10px;
+    color: #B3B3B3;
 }
